; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_PSQLexec.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_PSQLexec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i64 }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [47 x i8] c"You are currently not connected to a database.\00", align 1
@PSQL_ECHO_HIDDEN_OFF = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [59 x i8] c"********* QUERY **********\0A%s\0A**************************\0A\0A\00", align 1
@stdout = common dso_local global i64 0, align 8
@PSQL_ECHO_HIDDEN_NOEXEC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PSQLexec(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 1), align 8
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = call i32 @pg_log_error(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %48

9:                                                ; preds = %1
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %11 = load i64, i64* @PSQL_ECHO_HIDDEN_OFF, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %34

13:                                               ; preds = %9
  %14 = call i8* @_(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0))
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @printf(i8* %14, i8* %15)
  %17 = load i64, i64* @stdout, align 8
  %18 = call i32 @fflush(i64 %17)
  %19 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 2), align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %13
  %22 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 2), align 8
  %23 = call i8* @_(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i8*, i8** %3, align 8
  %25 = call i32 @fprintf(i64 %22, i8* %23, i8* %24)
  %26 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 2), align 8
  %27 = call i32 @fflush(i64 %26)
  br label %28

28:                                               ; preds = %21, %13
  %29 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %30 = load i64, i64* @PSQL_ECHO_HIDDEN_NOEXEC, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i32* null, i32** %2, align 8
  br label %48

33:                                               ; preds = %28
  br label %34

34:                                               ; preds = %33, %9
  %35 = call i32 (...) @SetCancelConn()
  %36 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 1), align 8
  %37 = load i8*, i8** %3, align 8
  %38 = call i32* @PQexec(i32 %36, i8* %37)
  store i32* %38, i32** %4, align 8
  %39 = call i32 (...) @ResetCancelConn()
  %40 = load i32*, i32** %4, align 8
  %41 = call i32 @AcceptResult(i32* %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %46, label %43

43:                                               ; preds = %34
  %44 = load i32*, i32** %4, align 8
  %45 = call i32 @ClearOrSaveResult(i32* %44)
  store i32* null, i32** %4, align 8
  br label %46

46:                                               ; preds = %43, %34
  %47 = load i32*, i32** %4, align 8
  store i32* %47, i32** %2, align 8
  br label %48

48:                                               ; preds = %46, %32, %7
  %49 = load i32*, i32** %2, align 8
  ret i32* %49
}

declare dso_local i32 @pg_log_error(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @_(i8*) #1

declare dso_local i32 @fflush(i64) #1

declare dso_local i32 @fprintf(i64, i8*, i8*) #1

declare dso_local i32 @SetCancelConn(...) #1

declare dso_local i32* @PQexec(i32, i8*) #1

declare dso_local i32 @ResetCancelConn(...) #1

declare dso_local i32 @AcceptResult(i32*) #1

declare dso_local i32 @ClearOrSaveResult(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
